# hierarchical-coding-agent

./: .env.example  .gitignore  CLINE_FEATURES_COMPLETE.md  DEEPSEEK_R1_UPDATE.md  HIERARCHICAL_SYSTEM.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MODE.md  LICENSE  OUTPUT_VERIFIER_README.md  PHASE1_CLINE_CONTEXT.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_DIFF_EXPERIENCE.md  PHASE3_COMPLETE.md  PHASE3_VSCODE_INTEGRATION.md  PR_HELPER_README.md  QUICK_START.md  QUICK_START_CHECKLIST.md  README.md  SECURITY.md  USAGE_GUIDE.md  VLLM_MIGRATION.md  WEB_INTERFACE_GUIDE.md  WEB_INTERFACE_README.md  WORKFLOW_GUIDE.md  check_memory.sh  delegate.py  hierarchical_orchestrator.py  lead_server.py  orchestrator.py  output_verifier.py  pr_helper.py  pyproject.toml  qwen3_lead_server.py  requirements.txt  simple_llm_server.py  start_coder_llm.sh  start_lead_transformers.sh  start_lead_vllm.sh  (+17 more)
agents/: __init__.py  coding_agent.py
config/: agent_config.yaml
core/: __init__.py  config.py  context_manager.py  db.py  diff_engine.py  ide_bridge.py  reflection.py  sandbox.py  security.py  templates.py
core/llm/: __init__.py  anthropic_adapter.py  base.py  ollama_adapter.py  openai_adapter.py
logs/: task1_plan.txt  task_1769898908977.json  task_1770209078572.json  task_1770214103579.json
sandbox/: Dockerfile  README.md  requirements.txt
tasks/: completed.json
templates/: add_error_handling.yaml  add_tests.yaml  refactor_method.yaml  update_config.yaml
tests/: test_coding_tools.py  test_context_manager.py  test_db.py  test_ollama_adapter.py  test_openai_adapter.py
tools/: __init__.py  coding_tools.py
